# nau88c22-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: clock.rs  lib.rs  registers.rs
