[package]
name = "nau88c22-rs"
version = "0.2.0"
edition = "2024"
description = "Rust driver for the nau88c22 audio codec."
license = "MIT"
repository = "https://github.com/northernpaws/nau88c22-rs"

[dependencies]
embedded-hal-async = "1.0.0"
libm = "0.2.15"
paste = "1.0.15"
proc-bitfield = "0.5.2"

[features]
default = []
std = []
